Update styles and some copy

--- a/src/style.css
+++ b/src/style.css
@@ -1,30 +1,60 @@
+:root {
+  --primary-color: #f7c548;
+  --secondary-color: #eeebd3;
+  --accent-color: #255957;
+  --primary-action: #b52d6d;
+  --interact-color: #8fcc49;
+  --text-light-contrast: white;
+  --text-dark-contrast: black;
+  --section-background: #ede6e3;
+  --card-background-dark: #437c90;
+}
+
 body {
   font-family: "Roboto Mono", sans-serif;
   margin: 0px;
 }
 
-section {
-  background-color: #fff7e4;
-  border-bottom: 10px solid white;
-}
-
 .header {
   height: 100vh;
-  background-color: #28282e;
-  color: white;
+  background-color: var(--secondary-color);
+  /* background-image: url("images/rogueTerminal.png"); */
+  background-position: right;
+  background-repeat: no-repeat;
+  color: var(--text-dark-contrast);
   font-size: 40px;
 }
 
 footer {
   display: flex;
-  justify-content: center;
-  padding: 50px;
+  justify-content: space-evenly;
+  height: 10dvh;
+  padding: 10px;
   background-color: black;
+}
+
+section {
+  padding: 10px;
 }
 
 nav {
   display: flex;
   justify-content: space-between;
+  flex-direction: row-reverse;
+  background-color: var(--primary-color);
+  box-shadow: 2px 2px 5px grey;
+  z-index: 100;
+  position: sticky;
+  top: 0;
+}
+
+nav a {
+  color: var(--text-dark-contrast);
+}
+
+nav a:hover {
+  color: var(--interact-color);
+  text-decoration-line: line-through;
 }
 
 ul {
@@ -97,7 +127,7 @@ button {
   flex-direction: column;
   align-items: center;
   padding: 2rem;
-  background-color: #f98284;
+  background-color: var(--card-background-dark);
   width: 40%;
   border-radius: 1.5rem;
 }
@@ -112,7 +142,6 @@ button {
   display: flex;
   justify-content: space-evenly;
   width: 30%;
-  /* background-color: tomato; */
   align-self: center;
 }
 
@@ -127,23 +156,24 @@ button {
   align-items: center;
   width: 200px;
   height: 50px;
-  background-color: #f98284;
+  background-color: var(--primary-action);
   border-radius: 30px;
   padding: 10px;
+  color: var(--text-dark-contrast);
 }
 
 .header-button:hover {
-  background-color: #ffc384;
+  background-color: var(--interact-color);
 }
 
 .header-button:active {
-  background-color: #d9c8bf;
+  background-color: var(--text-light-contrast);
 }
 
 .header-container {
   display: flex;
   height: 100%;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   padding: 20px;
 }
@@ -155,29 +185,72 @@ button {
   margin-right: 10px;
 }
 
+#socials-header svg {
+  fill: black;
+}
+
+#socials-header svg:hover {
+  fill: var(--interact-color);
+}
+
 .about-me {
   display: flex;
   justify-content: space-around;
   padding: 80px;
+  background-color: var(--accent-color);
 }
 
-.projects {
+.how-i-work {
   display: flex;
   flex-direction: column;
   text-align: center;
   padding: 80px;
+  background-color: var(--primary-color);
+}
+
+.howiwork-text {
+  align-self: center;
+  width: 50dvw;
+}
+
+.howiwork-container1,
+.howiwork-container3 {
+  flex-direction: row;
+}
+
+.howiwork-container2 {
+  flex-direction: row-reverse;
+}
+
+.howiwork-container1,
+.howiwork-container2,
+.howiwork-container3 {
+  display: flex;
+  padding-block: 10px;
+  justify-content: space-evenly;
 }
 
 .contact-form {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: white;
+  background-color: var(--secondary-color);
+  height: 75dvh;
+  padding-block: 35px;
+}
+
+.divider1 {
+  display: flex;
+  background-color: var(--secondary-color);
+}
+.divider2 {
+  display: flex;
 }
 
 .headshot {
-  width: 300px;
+  height: 65dvh;
   box-shadow: 10px 6px 10px#6c5671;
+  border-radius: 120px;
 }
 
 .headshot-container {
@@ -237,11 +310,18 @@ hr {
 
   .form {
     width: 60%;
+    height: 80%;
     border-radius: 1.5rem;
+    padding-block-end: 50px;
+  }
+
+  .contact-title {
+    font-size: 30px;
   }
 
   .form-inputs {
     width: 100%;
+    height: 80%;
   }
 }
 
@@ -259,6 +339,21 @@ hr {
     font-size: 1rem;
   }
 
+  .header-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 20px;
+  }
+  .socials {
+    justify-content: space-between;
+    flex-direction: row;
+    margin-right: 0px;
+    margin: 30px 0px 50px 0px;
+    width: 90%;
+    padding-bottom: 0px;
+  }
+
   ul {
     display: none;
   }
@@ -267,7 +362,7 @@ hr {
     display: flex;
     justify-content: flex-end;
     flex-direction: column-reverse;
-    background-color: #6c5671;
+    background-color: var(--card-background-dark);
   }
 
   input {
